# app/Http/Requests/Product/UpdateProductRequest.php
@@ -26,7 +26,7 @@ class UpdateProductRequest extends FormRequest
             'price' => 'required|numeric|min:0',
             'stock' => 'required|integer|min:0',
             'image' => 'nullable|image|max:2048',
-            'is_active' => 'boolean',
+            'is_active' => 'in:0,1,true,false',
         ];
     }
 }
